// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressPopup.0% 1`] = `
<div
  className="popup-overlay"
>
  <div
    className="popup-container"
  >
    <div
      className="row popup-container__header popup-container__header__normal"
    >
      <span
        className="progress-popup__title"
      >
        
      </span>
    </div>
    <div
      className="row popup-container__body"
    >
      <div
        className="columns large-12 popup-container__body__hasNoIcon"
      >
        <div
          className="progress-popup__content"
        >
          <div
            style={
              {
                "background": "#CCD6DD",
                "borderRadius": "5px",
                "height": "10px",
                "margin": "15px auto",
                "width": "90%",
              }
            }
          >
            <div
              style={
                {
                  "background": "#18BE94",
                  "borderRadius": "inherit",
                  "height": "100%",
                  "transition": "width 0.1s ease-in",
                  "width": "0%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="row popup-container__footer"
    >
      <div
        className="progress-popup__footer"
      />
    </div>
  </div>
</div>
`;

exports[`ProgressPopup.50% 1`] = `
<div
  className="popup-overlay"
>
  <div
    className="popup-container"
  >
    <div
      className="row popup-container__header popup-container__header__normal"
    >
      <span
        className="progress-popup__title"
      >
        My Title
      </span>
    </div>
    <div
      className="row popup-container__body"
    >
      <div
        className="columns large-12 popup-container__body__hasNoIcon"
      >
        <div
          className="progress-popup__content"
        >
          <div
            style={
              {
                "background": "#CCD6DD",
                "borderRadius": "5px",
                "height": "10px",
                "margin": "15px auto",
                "width": "90%",
              }
            }
          >
            <div
              style={
                {
                  "background": "#18BE94",
                  "borderRadius": "inherit",
                  "height": "100%",
                  "transition": "width 0.1s ease-in",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="row popup-container__footer"
    >
      <div
        className="progress-popup__footer"
      />
    </div>
  </div>
</div>
`;

exports[`ProgressPopup.100% 1`] = `
<div
  className="popup-overlay"
>
  <div
    className="popup-container"
  >
    <div
      className="row popup-container__header popup-container__header__normal"
    >
      <span
        className="progress-popup__title"
      >
        
      </span>
    </div>
    <div
      className="row popup-container__body"
    >
      <div
        className="columns large-12 popup-container__body__hasNoIcon"
      >
        <div
          className="progress-popup__content"
        >
          <div
            style={
              {
                "background": "#CCD6DD",
                "borderRadius": "5px",
                "height": "10px",
                "margin": "15px auto",
                "width": "90%",
              }
            }
          >
            <div
              style={
                {
                  "background": "#18BE94",
                  "borderRadius": "inherit",
                  "height": "100%",
                  "transition": "width 0.1s ease-in",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="row popup-container__footer"
    >
      <div
        className="progress-popup__footer"
      >
        <button
          className="argo-button argo-button--base-o"
          onClick={[Function]}
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;
